tests/ctu/fail/data/duplicate.ct
type A = int;
type A = int;
